<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="zh">
    <string name="app_name">面聊</string>
    <string name="version">版本号</string>
    <string name="check_for_update">检查更新</string>
    <string name="clip_board_clipped">内容已复制到剪贴版</string>
    <string name="field_no_info">无</string>
    <string name="delete">删除</string>
    <string name="create">创建</string>
    <string name="view">查看</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="contacts">通讯录 （%1$d人）</string>
    <string name="contacts_title">通讯录&#160;&#160;&#160;&#160;</string>
    <string name="high_chat_title">High群聊</string>
    <string name="high_chat">嗨群聊</string>
    <string name="high_open_time">每晚10：00开放</string>
    <string name="access">进入</string>
    <string name="high_chat_theme_no_entrance">只能进入一个话题</string>
    <string name="loading">读取中…</string>
    <string name="storage_not_available">存储卡不可用</string>
    <string name="crop_image">剪裁图片</string>
    <string name="user_agreement">面聊使用协议</string>
    <string name="change_log">更新日志</string>
    <string name="help">使用帮助</string>
    <string name="invite_friends">邀请朋友</string>
    <string name="invite_friends_desc">您的好友邀请您使用面聊，点击地址下载: </string>
    <string name="please_choose">请选择</string>
    <string name="handling_last_task">正在处理上一条任务</string>
    <string name="reply">回复</string>
    <string name="like">点赞</string>
    <string name="liked">已赞</string>
    <string name="cancel_like">取消赞</string>
    <string name="ms_failure_template">%1$s (%2$s)</string>
    <string name="choose_local_picture">选择本地图片</string>
    <string name="take_a_photo">拍照</string>
    <string name="question_mark">？</string>
    <string name="finish">完成</string>
    <string name="set_avatar">设置头像</string>
    <string name="set_scene_image">设置背景</string>
    <string name="confirm">请确认</string>
    <string name="invite">邀请</string>
    <string name="check_all">全选</string>
    <string name="uncheck_all">取消全选</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="post">发表</string>
    <string name="back">返回</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="field_tbd">待定</string>
    <string name="report">举报</string>
    <string name="ref_friends">"@好友"</string>
    <string name="map">地图</string>
    <string name="show_location">查看位置</string>
    <string name="field_required">必填</string>
    <string name="manage">订阅</string>
    <string name="send">发送</string>
    <string name="voice_message">[语音]</string>
    <string name="picture_message">[图片]</string>
    <string name="location_message">[位置]</string>
    <string name="share_location_message">[共享位置]</string>
    <string name="share_location_over">[位置共享结束]</string>
    <string name="share_location_no_result">抱歉，未查询到结果</string>
    <string name="add_friends_to_group">发起群聊</string>
    <string name="add_friends">添加朋友</string>
    <string name="group_chat_title">讨论组</string>
    <string name="get_members_info_failed">群成员信息获取失败</string>
    <string name="group_chat_info_title">聊天信息</string>
    <string name="group_chat_start_message">我发起了群聊</string>
    <string name="group_chat_not_support">对不起，该功能尚不支持群聊！</string>
    <string name="group_chat_toast_text">功能开发中，敬请期待!</string>
    <string name="group_chat_delete_chatrecord_success">聊天记录删除成功</string>
    <string name="update_gorup_name">修改群聊名称</string>
    <string name="update_my_nickname">我在本群的昵称</string>
    <string name="chose_report_reason">选择举报原因</string>
    <string name="chose_report_reason_toast">请选择一项举报内容</string>
    <string name="report_success_toast">举报成功</string>
    <string name="report_failed_toast">举报失败</string>
    <string name="third_party_login">第三方登录</string>
    <string name="login_loading_txt">登录中……</string>
    <string name="other_party_login">其他方式登录</string>
    <string name="chat_loading_voice">对方正在录音中……</string>
    <string name="chat_loading_txt">对方正在输入中……</string>
    <string name="splash_skip">跳过</string>
    <string name="fast_menu_choose_info">+号快捷功能显示</string>
    <string name="fast_menu_choose_count">(%1$d/4)</string>
    <string name="more_music">更多音乐:</string>
    <string name="tv_more_music">更多音乐</string>
    <string name="Group_management">群聊管理</string>
    <string name="app_channel_wandoujia">豌豆荚</string>
    <string name="app_channel_yingyongbao">应用宝</string>
    <string name="app_channel_yingyonghui">应用汇</string>
    <string name="app_channel_baidu">百度</string>
    <string name="app_channel_xiaomi">小米</string>
    <string name="app_channel_meizu">魅族</string>
    <string name="app_channel_360">360</string>
    <string name="app_channel_tjut">泰聚泰</string>
    <string name="app_channel_sina">新浪微博</string>
    <string name="app_channel_huawei">华为</string>
    <string name="um_titile_desc">有重大版本更新啦！</string>
    <string name="um_update_top_desc">面聊后续会努力为童鞋们获取更多便捷服务哒</string>
    <string name="um_positive_btn">去更新嘞!</string>
    <string name="um_negative_btn">我稍后去更新!</string>
    <string name="dia_title">更多精彩，敬请期待</string>
    <string name="dia_text">面聊后续会努力为童鞋们获取更多便捷服务哒</string>
    <string name="dia_button">知道啦!</string>
    <string name="pr_success">谢谢您的举报</string>
    <string name="pr_failed">举报失败</string>
    <string name="connecting">连接中…</string>
    <string name="disconnected">未连接到服务器</string>
    <string name="no_network">无网络连接</string>
    <string name="connect_timeout">连接超时</string>
    <string name="network_error">网络连接出错</string>
    <string name="invalid_url">无效的地址</string>
    <string name="tab_chat">消息</string>
    <string name="tab_my_college">我的大学</string>
    <string name="tab_tribe">部落</string>
    <string name="tab_forum">校园</string>
    <string name="tab_explore">更多</string>
    <string name="tab_more">更多</string>
    <string name="tab_slogan">去，趣发现</string>
    <string name="fun_game_title">上手容易，挑战辨别能力的小游戏,哟西，来！</string>
    <string name="fun_game_buttom_tit">下午好趣味游戏板块是小小游戏乐园，趣味性强，偶尔逛一逛有益于身心健康</string>
    <string name="me">我: </string>
    <string name="more">更多</string>
    <string name="call_checking_availability">同步状态…</string>
    <string name="call_starting">启动中…</string>
    <string name="call_failed">启动通话失败，请稍后再试</string>
    <string name="call_voice_no_phone">TA未设手机号</string>
    <string name="cht_chat_with_friends">与朋友一起聊天</string>
    <string name="cht_chat_no_message">哼，还没有聊天消息喔！</string>
    <string name="cht_open_contacts">进入通讯录</string>
    <string name="cht_no_chat_recently">你近期还没有跟朋友聊过天哦，点击屏幕左上角的通讯录跟朋友聊天吧！</string>
    <string name="cht_no_contact">咦？怎么还没有小伙伴呀？\n快来认识新的小伙伴吧！</string>
    <string name="cht_find_contacts">添加好友</string>
    <string name="cht_choose_call">选择通话方式</string>
    <string name="cht_clip_board_label">面聊 - 聊天内容</string>
    <string name="cht_multi_send_title">群发消息</string>
    <string name="cht_multi_send_tst_no_msg">消息为空</string>
    <string name="cht_multi_send_tst_failed">群发消息失败</string>
    <string name="cht_multi_send_tst_success">消息已成功发送给好友</string>
    <string name="cht_msg_voice">%1$d\"</string>
    <string name="cht_pressed_to_record">按住录音</string>
    <string name="cht_unpressed_to_end">松开结束</string>
    <string name="cht_unpressed_to_finish">松开完成</string>
    <string name="cht_move_up_to_cancle">上划取消</string>
    <string name="cht_unpressed_to_cancle">松开取消</string>
    <string name="cht_tst_voice_too_short">录音时间太短啦！</string>
    <string name="cht_input_hint">输入：可以触发动作</string>
    <string name="cht_input_hint_group">请输入内容</string>
    <string name="cht_share_location_title">位置共享</string>
    <string name="cht_request_dialog_title">位置共享确认</string>
    <string name="cht_request_dialog_content">加入位置共享，聊天中其他人也能看到你的位置，确定加入？</string>
    <string name="cht_sharelication_dialog_title">退出实时共享</string>
    <string name="cht_sharelication_dialog_content">您确定要退出实时位置共享服务吗？</string>
    <string name="cht_share_location_text">我发起了位置共享</string>
    <string name="cht_share_location_persons">%1$d人在共享位置</string>
    <string name="cht_share_location_distance">（距离：%1$s）</string>
    <string name="cht_share_location_over_txt">位置共享已经结束</string>
    <string name="cht_group_name_txt">群聊名称</string>
    <string name="cht_group_size">群聊大小</string>
    <string name="cht_group_chat_top">置顶聊天</string>
    <string name="cht_group_chat_picture">聊天图片</string>
    <string name="cht_group_set_backgroud">设置聊天背景</string>
    <string name="cht_group_my_nickname">我的本群昵称</string>
    <string name="cht_group_delete_record">清空聊天记录</string>
    <string name="cht_report_group">举报</string>
    <string name="cht_group_del_quit">删除并退出</string>
    <string name="cht_group_quit_message">删除并退出后，将不再接收此群聊信息</string>
    <string name="cht_group_del_records_message">确定删除群的聊天记录吗?</string>
    <string name="please_input_gorup_name">请输入群聊名称</string>
    <string name="please_input_nickname">请输入您的本群昵称</string>
    <string name="cht_no_picture">暂无图片消息!</string>
    <string-array name="cht_report_reasons">
        <item>色情低俗</item>
        <item>广告骚扰</item>
        <item>政治敏感</item>
        <item>谣言</item>
        <item>诈骗钱财</item>
        <item>违法暴力</item>
        <item>抄袭冒用</item>
    </string-array>
    <string-array name="cht_share_location">
        <item>发送位置</item>
        <item>共享实时位置</item>
    </string-array>
    <string-array name="cht_long_press_menu">
        <item>删除聊天记录</item>
    </string-array>
    <string-array name="cht_call_choices">
        <item>打电话</item>
        <item>(wifi) 视频</item>
    </string-array>
    <string name="cht_ext_picture">图片</string>
    <string name="cht_ext_location">位置</string>
    <string name="cht_ext_emotion">表情</string>
    <string name="cht_ext_bubble">气泡</string>
    <string name="cht_ext_background">背景</string>
    <string name="cht_ext_character">角色</string>
    <string name="cht_ext_res_get_failed">聊天资源获取失败</string>
    <string name="cht_ext_res_set_failed">聊天资源设置失败</string>
    <string name="notify_chat">新聊天消息（%1$d条）</string>
    <string name="notify_course">课程提醒</string>
    <string name="cur_week_mon">星期一</string>
    <string name="cur_week_tue">星期二</string>
    <string name="cur_week_wed">星期三</string>
    <string name="cur_week_thu">星期四</string>
    <string name="cur_week_fri">星期五</string>
    <string name="cur_week_sat">星期六</string>
    <string name="cur_week_sun">星期日</string>
    <string name="cf_create_channel_go_idvif">去看看>></string>
    <string name="prof_short_desc">个性签名</string>
    <string name="prof_nick_name">昵称</string>
    <string name="prof_email">邮箱</string>
    <string name="prof_phone">手机号码</string>
    <string name="prof_account">登录账号</string>
    <string name="prof_update_password">修改密码</string>
    <string name="prof_no_short_desc">Ta很懒,什么都没有留下</string>
    <string name="prof_remark">备注名称</string>
    <string name="prof_email_verify">绑定</string>
    <string name="prof_email_verified">已绑定</string>
    <string name="job_position">职位</string>
    <string name="job_recru_corp">公司</string>
    <string name="job_recru_invite_time">招聘时间</string>
    <string name="emo_recharge_pay_way">选择支付方式</string>
    <string name="cannot_create_channel">还不可以创建部落喔</string>
    <string name="channel_voice">语音</string>
    <string name="channel_picture">图文</string>
    <string name="channel_text">文字</string>
    <string name="channel_create_qus">部落能做啥?</string>
    <string name="channel_create_intro">记录、分析，最重要的是心与心的together</string>
    <string name="channel_create_get_userinfo_fail">还未进行身份验证</string>
    <string name="channel_create_remind">24小时只能创建一个部落</string>
    <string name="channel_create_show_chose_attr">选择您要创建的部落属性</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_money_by_ml_god">面聊金币余额支付</string>
    <string name="pay_money_by_unionpay">银联支付</string>
    <string name="pay_money_unionpay">储蓄卡、信用卡</string>
</resources>