<com.tjut.mianliao.black.MagicLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.tjut.mianliao.theme.ThemeImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/channel_pic_bg_found"/>

    <com.tjut.mianliao.theme.ThemeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/channel_create_qus"
        android:textColor="#BEBEBE"
        android:textSize="16sp"/>

    <com.tjut.mianliao.theme.ThemeTextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:gravity="center"
        android:text="@string/channel_create_intro"
        android:textColor="#979797"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_create_start"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/selector_create_channel_bg_push_no"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/cannot_create_channel"
        android:textColor="@color/selector_clolor_create_channel_text"
        android:textSize="14sp"/>

    <com.tjut.mianliao.black.MagicLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">

            <com.tjut.mianliao.theme.ThemeTextView
                android:id="@+id/tv_is_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/redcheckbox_warning"
                android:drawablePadding="5dp"
                android:text="@string/channel_create_get_userinfo_fail"
                android:textColor="#979797"/>

            <TextView
                android:id="@+id/tv_go_idverfy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_is_id"
                android:layout_marginLeft="10dp"
                android:text="@string/cf_create_channel_go_idvif"
                android:textColor="@color/txt_tab_item_purple"/>
        </RelativeLayout>

        <com.tjut.mianliao.theme.ThemeTextView
            android:id="@+id/tv_can_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/redcheckbox_warning"
            android:drawablePadding="5dp"
            android:layout_gravity="left"
            android:text="@string/channel_create_remind"
            android:textColor="#979797"/>
    </com.tjut.mianliao.black.MagicLinearLayout>

</com.tjut.mianliao.black.MagicLinearLayout>